--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,63 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+html, body { height: 100%; }
+body { margin: 0; font-family: "Metropolis",Arial,sans-serif; background-color: #1b1f23; color: whitesmoke;}
+.control-label {
+    font-weight: 600;
+    font-size: 17px;
+    font-family: "Metropolis",Arial,sans-serif;
+}
+.container-fluid {
+    margin: 0;
+    padding: 0;
+}
+.row {
+    margin-right: 0;
+    margin-left: 0;
+}
+
+.mat-list-base .mat-list-option {
+    color: #ffffffde !important;
+}
+
+.mat-list-option:hover {
+    background-color: #ffffff0a;
+}
+
+.mat-form-field-appearance-fill .mat-form-field-flex {
+    background-color: #ffffff0f;
+}
+
+.mat-form-field-label {
+    color: #ffffff;
+}
+
+.mat-focused .mat-form-field-label {
+    /*change color of label*/
+    color:  #ffffff !important;
+   }
+
+.mat-form-field-underline {
+    /*change color of underline*/
+    background-color: #ffffff !important;
+  } 
+
+.mat-form-field-ripple {
+    /*change color of underline when focused*/
+    background-color: #ffffff !important;;
+   }
+
+   .mat-select-value {
+    color: #ffffff;
+   }
+
+  .mat-button {
+    background-color: white; 
+    color: black;
+   }
+
+   .mat-flat-button.mat-button-disabled {
+    background-color: white;
+    color: #8a8a8a !important;
+   }
