--- a/src/styles.less
+++ b/src/styles.less
@@ -61,3 +61,11 @@ body { margin: 0; font-family: "Metropolis",Arial,sans-serif; background-color: 
     background-color: white;
     color: #8a8a8a !important;
    }
+
+   .mat-progress-bar .mat-progress-bar-buffer {
+    background: #ffffff;
+  }
+
+  .mat-progress-bar-fill::after {
+    background-color: #37474f;
+  }
