--- a/src/styles.less
+++ b/src/styles.less
@@ -69,3 +69,10 @@ body { margin: 0; font-family: "Metropolis",Arial,sans-serif; background-color: 
   .mat-progress-bar-fill::after {
     background-color: #37474f;
   }
+
+   .cLoader .mat-dialog-container {
+       box-shadow: none;
+       background: none;
+       color: none;
+        background-color: transparent;
+  }
